<?xml version="1.0"?>
<package format="2">
  <name>jnmouse_gazebo</name>
  <version>0.0.0</version>
  <description>The jnmouse_gazebo package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <author email="daisuke.sato@rt-net.jp">Daisuke Sato</author>

  <license>Apache-2.0</license>

  <url type="website">https://github.com/rt-net/jnmouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/jnmouse_sim</url>
  <url type="bugtracker">https://github.com/rt-net/jnmouse_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>jnmouse_description</exec_depend>
  <exec_depend>raspimouse_fake</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- for teleop -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/> 
  </export>
</package>
